--- a/wykresy/wykres_kolumnowy/wykres_kolumnowy.html
+++ b/wykresy/wykres_kolumnowy/wykres_kolumnowy.html
@@ -15,15 +15,10 @@
 <body>
 <div>
     <div style="text-align: center;">
-        <h1>Wykres słupkowy</h1>
+        <h1>Wykres kolumnowy</h1>
         <div id="d3-container"></div>
-        <script src="Dzialajce\D3_RectChart.js"></script>
+        <script src="wykres_kolumnowy.js"></script>
     </div>
-    <div style="text-align: center;">
-      <h1>Wykres słupkowy</h1>
-      <div id="d3-container"></div>
-      <script src="wykres_kolowy.js"></script>
-  </div>
 </div>
 </body>
 </html>
