--- a/podstawowe_operacje/tworzenie_skal.html
+++ b/podstawowe_operacje/tworzenie_skal.html
@@ -4,7 +4,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
-    <p id="input">Dane: 5</p>
+    <p id="input">Dane: </p>
     <p id="output">Wynik: </p>
 
     <script src="tworzenie_skal.js"></script>
